清洗不需要的代码